--- a/App desktop/package.json
+++ b/App desktop/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^11.1.1"
+    "electron": "^11.1.1",
+    "express": "^4.17.1"
   }
 }
